Estructura proyecto, creación carpeta assets

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Receta</title>
 </head>
 <body>
-    
+    <div class="contenedor-principal">
+        <header>
+            <!--Header contain-->
+        </header>
+        <nav>
+            <main>
+                
+                <aside>
+
+                </aside>
+            </main>
+        </nav>
+        <footer>
+            <!--Footer Contain-->
+        </footer>
+    </div>
 </body>
 </html>
