Finalización contenido principal

--- a/index.html
+++ b/index.html
@@ -15,9 +15,54 @@
         </header>
         <nav>
             <main>
+                <article class="contenedor-info-principal">
+                    <figure class="contenedor-imagen">
+                        <img class="img-ensalada" src="./assets/ensalada.jpg" alt="Imagen Ensalada de Quinoa y Kale con Vinagreta de Mango y Lima">
+                    </figure>
+                    <div class="contenedor-info-secundario">
+                        <div class="contenedor-info-encabezado contedor-info">
+                            <h1 class="titulo-contenido-principal">Ensalada de Quinoa y Kale con Vinagreta de Mango y Lima</h1>
+                            <p class="parrafo-contenido-principal">Una ensalada vibrante y llena de sabor que combina la textura crujiente del kale y la suavidad de la quinoa, todo mezclado con una vinagreta tropical de mango y lima. Este plato es ideal para quienes buscan una opción saludable y deliciosa.</p>
+                        </div>
+                        <div class="contenedor-info-tiempo-preparacion contedor-info">
+                            <h3 class="sub-titulo-tiempo-preparacion">Tiempo de Preparación:</h3>
+                            <ul class="lista-tiempo-preparacion">
+                                <li class=>Preparación de ingredientes: 15 minutos</li>
+                                <li>Cocción de la quinoa: 15 minutos</li>
+                                <li>Tiempo total: 30 minutos</li>
+                            </ul>
+                        </div>
+                        <div class="contenedor-info-preparacion contedor-info">
+                            <h2 class="sub-titulo-preparacion">Preparación:</h2>
+                            <ol class="lista-preparacion">
+                                <li>Cocinar la quinoa:</li>
+                                <ul>
+                                    <li>Enjuaga la quinoa bajo agua fría.</li>
+                                    <li>En una cacerola, lleva a ebullición las 2 tazas de agua. Añade la quinoa, reduce el fuego y cocina a fuego lento durante 15 minutos o hasta que el agua se haya absorbido y la quinoa esté esponjosa.</li>
+                                    <li>Deja enfriar la quinoa a temperatura ambiente.</li>
+                                </ul>
+                                <li>Preparar la vinagreta:</li>
+                                <ul>
+                                    <li>En un tazón, mezcla el puré de mango, jugo de lima, aceite de oliva y miel o jarabe de agave. Añade sal y pimienta al gusto. Bate bien hasta que todos los ingredientes estén bien incorporados.</li>
+                                </ul>
+                                <li>Ensamblar la ensalada:</li>
+                                <ul>
+                                    <li>En un tazón grande, mezcla el kale, mango, pimiento rojo, cebolla morada, cilantro y aguacate.</li>
+                                    <li>Añade la quinoa enfriada a la mezcla de vegetales.</li>
+                                    <li>Vierte la vinagreta sobre la ensalada y mezcla bien para asegurar que todos los ingredientes estén cubiertos con la vinagreta.</li>
+                                    <li>Espolvorea las semillas de girasol tostadas por encima si lo deseas.</li>
+                                </ul>
+                            </ol>
+                        </div>
+                    </div>
+                </article>
+                <aside class="contenedor-aside">
+                    <div class="contenedor-nutricional">
 
-                <aside>
+                    </div>
+                    <div class="contenedor-otros">
 
+                    </div>
                 </aside>
             </main>
         </nav>
