--- a/index.html
+++ b/index.html
@@ -25,27 +25,29 @@
                             <p class="parrafo-contenido-principal">Una ensalada vibrante y llena de sabor que combina la textura crujiente del kale y la suavidad de la quinoa, todo mezclado con una vinagreta tropical de mango y lima. Este plato es ideal para quienes buscan una opción saludable y deliciosa.</p>
                         </div>
                         <div class="contenedor-info-tiempo-preparacion contedor-info">
-                            <h3 class="sub-titulo-tiempo-preparacion">Tiempo de Preparación:</h3>
-                            <ul class="lista-tiempo-preparacion">
-                                <li class=>Preparación de ingredientes: 15 minutos</li>
-                                <li>Cocción de la quinoa: 15 minutos</li>
-                                <li>Tiempo total: 30 minutos</li>
-                            </ul>
+                            <div class="contenido-info-tiempo-preparacion">
+                                <h3 class="sub-titulo-tiempo-preparacion">Tiempo de Preparación:</h3>
+                                <ul class="lista-tiempo-preparacion">
+                                    <li>Preparación de ingredientes: 15 minutos</li>
+                                    <li>Cocción de la quinoa: 15 minutos</li>
+                                    <li>Tiempo total: 30 minutos</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="contenedor-info-preparacion contedor-info">
                             <h2 class="sub-titulo-preparacion">Preparación:</h2>
                             <ol class="lista-preparacion">
-                                <li>Cocinar la quinoa:</li>
+                                <li class="principal">Cocinar la quinoa:</li>
                                 <ul>
                                     <li>Enjuaga la quinoa bajo agua fría.</li>
                                     <li>En una cacerola, lleva a ebullición las 2 tazas de agua. Añade la quinoa, reduce el fuego y cocina a fuego lento durante 15 minutos o hasta que el agua se haya absorbido y la quinoa esté esponjosa.</li>
                                     <li>Deja enfriar la quinoa a temperatura ambiente.</li>
                                 </ul>
-                                <li>Preparar la vinagreta:</li>
+                                <li class="principal">Preparar la vinagreta:</li>
                                 <ul>
                                     <li>En un tazón, mezcla el puré de mango, jugo de lima, aceite de oliva y miel o jarabe de agave. Añade sal y pimienta al gusto. Bate bien hasta que todos los ingredientes estén bien incorporados.</li>
                                 </ul>
-                                <li>Ensamblar la ensalada:</li>
+                                <li class="principal">Ensamblar la ensalada:</li>
                                 <ul>
                                     <li>En un tazón grande, mezcla el kale, mango, pimiento rojo, cebolla morada, cilantro y aguacate.</li>
                                     <li>Añade la quinoa enfriada a la mezcla de vegetales.</li>
@@ -58,10 +60,82 @@
                 </article>
                 <aside class="contenedor-aside">
                     <div class="contenedor-nutricional">
-
+                        <div class="contenedor-ingredientes">
+                            <h2 class="sub-titulo-ingredientes">Ingredientes:</h2>
+                            <ol class="lista-ingredientes">
+                                <li class="principal">Para la ensalada:</li>
+                                <ul>
+                                    <li>1 taza de quinoa</li>
+                                    <li>2 tazas de agua</li>
+                                    <li>4 tazas de kale, sin tallos y picado</li>
+                                    <li>1 taza de mango, cortado en cubos</li>
+                                    <li>1/2 taza de pimiento rojo, cortado en cubos</li>
+                                    <li>1/2 taza de cebolla morada, finamente picada</li>
+                                    <li>1/4 taza de cilantro fresco, picado</li>
+                                    <li>1 aguacate, cortado en cubos</li>
+                                    <li>1/4 taza de semillas de girasol tostadas (opcional)</li>
+                                </ul>
+                                <li class="principal">Para la vinagreta de mango y lima:</li>
+                                <ol>
+                                    <li>1/2 taza de puré de mango (puede ser mango fresco o congelado)</li>
+                                    <li>1/4 taza de jugo de lima fresco</li>
+                                    <li>2 cucharadas de aceite de oliva</li>
+                                    <li>1 cucharada de miel o jarabe de agave</li>
+                                    <li>Sal y pimienta al gusto</li>
+                                </ol>
+                            </ol>
+                        </div>
+                        <div class="contenido-nutricional">
+                            <h2 class="sub-titulo-contenido-nutricional">Valor Nutricional</h2>
+                            <table>
+                                <tr>
+                                  <td>Calorias</td>
+                                  <td>277kcal</td>
+                                <tr>
+                                  <td>Carbohidratos</td>
+                                  <td>0g</td>
+                                </tr>
+                                <tr>
+                                  <td>Proteinas</td>
+                                  <td>20g</td>
+                                </tr>
+                                </tr>
+                                <tr>
+                                  <td>Grasas</td>
+                                  <td>277kca</td>
+                                </tr>
+                              </table>
+                        </div>
                     </div>
                     <div class="contenedor-otros">
-
+                        <h2 class="titulo-mas-recetas">Más Recetas</h2>
+                        <div class="receta">
+                            <div class="contenedor-imagen-receta">
+                                <img class="imagen-receta" src="./assets/tacosColiflor.webp" alt="Tacos de Coliflor con Salsa de Aguacate y Cilantro">
+                            </div>
+                            <div class="contenido-receta">
+                                <h3 class="titulo-recetas">Tacos de Coliflor con Salsa de Aguacate y Cilantro</h3>
+                                <p class="texto-receta">Tacos vegetarianos crujientes con coliflor asada y una salsa cremosa de aguacate y cilantro.</p>
+                            </div>
+                        </div>
+                        <div class="receta">
+                            <div class="contenedor-imagen-receta">
+                                <img class="imagen-receta"  src="./assets/ramenConPollo.jpeg" alt="Ramen de Pollo con Jengibre y Ajo">
+                            </div>
+                            <div class="contenido-receta">
+                                <h3 class="titulo-recetas">Ramen de Pollo con Jengibre y Ajo</h3>
+                                <p class="texto-receta">Ramen casero con un caldo sabroso, trozos de pollo, jengibre, ajo, y vegetales frescos.</p>
+                            </div>
+                        </div>
+                        <div class="receta">
+                            <div class="contenedor-imagen-receta">
+                             <img class="imagen-receta"  src="./assets/espaguetis.jpeg" alt="Pasta de Calabacín con Pesto de Albahaca y Almendras">
+                            </div>
+                            <div class="contenido-receta">
+                                <h3 class="titulo-recetas">Pasta de Calabacín con Pesto de Albahaca y Almendras</h3>
+                                <p class="texto-receta">Espirales de calabacín con pesto casero de albahaca y almendras, una opción ligera y sin gluten.</p>
+                            </div>
+                        </div>
                     </div>
                 </aside>
             </main>
