Terminación footer y version 1.0 terminada

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <p class="texto-receta">Ramen casero con un caldo sabroso, trozos de pollo, jengibre, ajo, y vegetales frescos.</p>
                             </div>
                         </div>
-                        <div class="receta">
+                        <div class="receta-ultima">
                             <div class="contenedor-imagen-receta">
                              <img class="imagen-receta"  src="./assets/espaguetis.jpeg" alt="Pasta de Calabacín con Pesto de Albahaca y Almendras">
                             </div>
@@ -141,7 +141,10 @@
             </main>
         </nav>
         <footer>
-            <!--Footer Contain-->
+            <div class="contenido-footer">
+                <img class="logo" src="./assets/logo_bitcook.png" alt="Logo BitCook">
+                <img src="./assets/copyright.png" alt="Copyright">
+            </div>
         </footer>
     </div>
 </body>
