V1 terminada vista presentacion receta

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="contenedor-principal">
         <header class="encabezado">
             <img class="logo" src="./assets/logo_bitcook.png" alt="Logo BitCook">
-            <a class="link-encabezado" href="">Envia Tú Receta</a>
+            <a class="link-encabezado" href="">Envia Tú Receta...</a>
             <button class="btn-activar-modo-oscuro"><img class="img-modoOscuro" src="./assets/modoOscuro.png" alt="Boton modo Oscuro"></button>
         </header>
         <nav>
@@ -143,7 +143,7 @@
         <footer>
             <div class="contenido-footer">
                 <img class="logo" src="./assets/logo_bitcook.png" alt="Logo BitCook">
-                <img src="./assets/copyright.png" alt="Copyright">
+                <img class="img-copyright" src="./assets/copyright.png" alt="Copyright">
             </div>
         </footer>
     </div>
