--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="encabezado">
             <img class="logo" src="./assets/logo_bitcook.png" alt="Logo BitCook">
             <a class="link-encabezado" href="">Envia Tú Receta...</a>
-            <button class="btn-activar-modo-oscuro"><img class="img-modoOscuro" src="./assets/modoOscuro.png" alt="Boton modo Oscuro"></button>
+            <button class="btn-activar-modo-oscuro"><img class="img-modoOscuro" src="assets/luna.svg" alt="Boton modo Oscuro"></button>
         </header>
         <nav>
             <main>
